<resources>
    <string name="app_name">ChatAPP</string>
    <string name="register_title">User Register UI</string>
    <string name="login_title">User Login UI</string>
    <string name="user_hint">Please enter 4-10 characters for the user</string>
    <string name="pwd_hint">Please input a password</string>
    <string name="rpwd_hint">Please confirm the password</string>
    <string name="email">Email:</string>
    <string name="sex">Please select a sex:</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="school">Please select a school:</string>
    <string name="city">City:</string>
    <string name="date">Birth:</string>
    <string name="automatic">automatic login</string>
    <string name="remember">Remember the password</string>
    <string name="register">Register</string>
    <string name="to_register">Go to register</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="message">
        Copyright: Department of software engineering, Guangdong Neusoft University \n
        Guangdong Neusoft college website: https://www.nuit.edu.cn \n
        Telephone: 18988888888 \n
        Email: tgh@qq.com
    </string>
    <string name="friendName">Please input friend\'s name</string>
    <string name="friendIntroduce">Please input friend\'s introduce</string>
    <string name="friendState">State:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>