<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <com.example.wechat.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!--<include layout="@layout/title"/>-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:background="@color/white"
        android:textSize="25dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint"
        android:textColorHint="#999"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:id="@+id/edit_user"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pwd_hint"
        android:textColorHint="#999"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:id="@+id/edit_pwd"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/rpwd_hint"
        android:textColorHint="#999"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:id="@+id/edit_rpwd"
        android:layout_marginTop="7dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="13"
            android:padding="5dp"
            android:textSize="16dp" />

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailImg"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_sex"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="16dp"
                android:gravity="center"
                android:paddingRight="5dp"
                android:textColor="@color/black"
                android:id="@+id/rb_girl"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="@color/black"
                android:id="@+id/rb_boy"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textSize="16dp"
            android:layout_gravity="center"
            android:textColor="@color/black"/>

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:id="@+id/actv_school"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/sp_city"
            android:layout_width="120dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"/>

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:layout_weight="1"
            android:id="@+id/dp_birth"
            android:datePickerMode="spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:id="@+id/register"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:drawableLeft="@android:drawable/ic_delete"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:id="@+id/clear"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:drawableLeft="@android:drawable/ic_input_add"
            android:id="@+id/login"
            android:layout_weight="1"
            android:onClick="userLogin"/>

    </LinearLayout>


    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:autoLink="web|phone|email"
        android:drawableLeft="@mipmap/ic_launcher"
        android:text="@string/message"/>-->

</LinearLayout>